[package]
name = "match_type"
version = "0.1.5"
edition = "2021"
license = "MIT"
description = "Match on the type of an expression at compile time."
repository = "https://github.com/Garbaz/match_type"


[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

